# joplin-mcp

./: CHANGELOG.md  Dockerfile.e2e  Dockerfile.e2e.dockerignore  README.md  docker-compose.e2e.yml  joplin-mcp.json.example  pyproject.toml
scripts/: run-e2e.sh
src/joplin_mcp/: __init__.py  config.py  fastmcp_server.py  notebook_utils.py
src/joplin_mcp/tools/: notebooks.py  notes.py  tags.py
tests/: conftest.py  test_config.py  test_integration_allowlist.py  test_integration_whitelist.py  test_notebook_allowlist_access.py  test_notebook_allowlist_config.py  test_notebook_whitelist_access.py  test_notebook_whitelist_config.py  test_pathspec_patterns.py  test_tools_notebooks.py  test_tools_notebooks_allowlist.py  test_tools_notebooks_whitelist.py  test_tools_notes_allowlist.py  test_tools_notes_whitelist.py  test_tools_tags_allowlist.py
tests/e2e/: conftest.py  test_e2e_allowlist.py  test_e2e_tools.py
